# plugin-moai-native-events

./: CMakeLists.txt  MOAINativeEventsBase.h  README.md  host.cpp  host.h  plugin.CMake
MoaiNativeEventsAndroid/: MOAIHello.cpp  MOAIHello.h  MOAINativeEventsAndroid.cpp  MOAINativeEventsAndroid.h  host.cpp
MoaiNativeEventsAndroid/JavaPackage/com/whalefood/moaiplugins/: MoaiNativeEvents.java
MoaiNativeEventsAndroid/moai-native-events/: MOAINativeEventsBase.cpp
MoaiNativeEventsIOS/: MOAIHello.cpp  MOAILuaGeneralCallback.h  MOAILuaGeneralCallback.mm  MOAINativeEventsIOS.h  MOAINativeEventsIOS.mm
MoaiNativeEventsIOS/moai-native-events/: MOAINativeEventsBase.mm  MOAINativeEventsIOS.h  MOAINativeEventsIOS.mm
MoaiNativeEventsLua/: MOAINativeEvent.lua  MOAINativeEvents.lua
moai-native-events/: MOAINativeEventsBase.h
